<resources>
    <string name="app_name">FEI-EATS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario incorrecto</string>
    <string name="invalid_password">La contraseña debe ser mayor de 5 caracteres</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>


    <string name="bonton_registrar">Registrar</string>
    <string name="text_login">¿Ya tienes cuenta? \n Inicia sesión aquí</string>
    <string name="texto_registro">¿No tienes cuenta? \n Registrate aquí</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Productos</string>
    <string name="menu_acercade">Acerda de</string>
    <string name="menu_salir">Salir</string>

    <string name="home_second">Home Second</string>
    <string name="text_usuario">Correo</string>
    <string name="text_contrasena">Contraseña</string>
    <string name="text_telefono">Teléfono</string>

    <!-- Textos Home Fragment -->
    <string name="todos">Todos</string>
    <string name="dulces">Dulces</string>
    <string name="comida">Comida</string>
    <string name="frituras">Frituras</string>
    <string name="contrase_a">Contraseña: ******</string>
    <string name="cargando_datos">Cargando datos...</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="todo" />
    <string name="editar_informaci_n" />
    <string name="editar_informacion">Editar información</string>
    <string name="elegir_de_galer_a">Elegir de Galería</string>

    <string-array name="categoria">
        <item>Dulces</item>
        <item>Comida</item>
        <item>Frituras</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminar_foto">Eliminar foto</string>
    <string name="regresar_a_inicio">Regresar a inicio</string>
    <string name="registrar_productos">Registrar productos</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="registar_producto">Registrar producto</string>
    <string name="categor_a">Categoría</string>
    <string name="editar_foto">Editar foto</string>
    <string name="hola">Hola</string>
    <string name="de_galer_a">De galería</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="eliminar">Eliminar</string>
    <string name="de_la_c_mara">De la cámara</string>
    <string name="foto_de_producto">FOTO DE PRODUCTO</string>

    <string name="Editar">Editar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="EliminarU">Eliminar Usuario</string>
</resources>
