<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.principal.ui.gallery.EditarFoto">

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="161dp"
        android:layout_height="152dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/btn_amarillo"
        android:text="@string/elegir_de_galer_a"
        android:textColor="@color/colorTextIcons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20" />

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/btn_rojo"
        android:text="@string/eliminar_foto"
        android:textColor="@color/colorTextIcons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button20"
        app:layout_constraintVertical_bias="0.281" />

    <Button
        android:id="@+id/button23"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/btn_verde"
        android:text="@string/regresar_a_inicio"
        android:textColor="@color/colorTextIcons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button22"
        app:layout_constraintVertical_bias="0.21" />

</androidx.constraintlayout.widget.ConstraintLayout>