<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgProducto"
                android:layout_width="329dp"
                android:layout_height="169dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/foto_de_producto"
                app:srcCompat="@drawable/dulce" />

            <LinearLayout
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMensaje"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textViewMensaje2"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textViewMensaje3"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="41dp">

                    <Button
                        android:id="@+id/bntEditar"
                        android:layout_width="80dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="6dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="113dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/btn_verde"
                        android:text="@string/Editar"
                        android:textColor="@color/colorTextIcons" />

                    <Button
                        android:id="@+id/btnEliminar"
                        android:layout_width="84dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="98dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="17dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/btn_rojo"
                        android:text="@string/Eliminar"
                        android:textColor="@color/colorTextIcons" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
